--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sliense-ysd.github.io/outsea",  
+  "homepage": "https://sliense-ysd.github.io/portfolio-website",  
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
